kvision-assets/src/css/style.css
/* ... */
.form-check-input.is-invalid:indeterminate[type="checkbox"], .was-validated .form-check-input:invalid:indeterminate[type="checkbox"] {
    background-color: var(--bs-danger, #dc3545);
    border-color: var(--bs-danger, #dc3545);
}

.form-check .form-check-input.form-control-sm {
    height: 18px;
    min-height: 18px;
    margin-left: -1.7em;
}

.form-check .form-check-input.form-control-lg {
    height: 34px;
    min-height: 34px;
    margin-left: -1.2em;
    margin-right: 0.3em;
}

.tabulator-row .tabulator-cell.tabulator-editing input.form-check-input:checked[type="checkbox"] {
    background-color: var(--bs-primary, #0d6efd);
    background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 20 20%27%3e%3cpath fill=%27none%27 stroke=%27%23fff%27 stroke-linecap=%27round%27 stroke-linejoin=%27round%27 stroke-width=%273%27 d=%27m6 10 3 3 6-6%27/%3e%3c/svg%3e");
    border-color: var(--bs-primary, #0d6efd);
}

.kv-focus {
    border-radius: 0.25rem;
    outline-width: 0px;
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}

.kv-focus .kv-fileinput-caption {
    border-color: #80bdff;
}

.modal-dialog .modal-footer {
    flex-wrap: wrap;
}

.modal-dialog .modal-footer > button {
    margin-top: 5px;
}

.kv_fieldset {
    border: 1px solid #dee2e6;
    border-radius: 0.25rem;
    padding-left: 1rem;
    padding-right: 1rem;
}

.kv_fieldset legend {
    border: 1px solid #dee2e6;
    border-radius: 0.25rem;
    margin-bottom: 0;
    font-size: 1rem;
    font-weight: bold;
    padding: 3px 10px 3px 10px;
    width: auto;
    float: inherit;
}

form fieldset.kv_fieldset {
    padding-top: 5px;
    margin-bottom: 8px;
}

form[class~="form-horizontal"] fieldset.kv_fieldset {
    padding-left: 1.1rem;
    padding-right: 2rem;
    margin-right: -15px;
    margin-left: -15px;
}

form[class~="form-inline"] fieldset.kv_fieldset {
    margin-right: 6px;
}

form[class~="form-horizontal"] div.form-group {
    align-items: center;
}

ul.typeahead > li.active > a {
    text-decoration: none;
    background-color: #f8f9fa;
}

#toast-container .toast {
    background-color: #030303;
    max-width: inherit;
}

#toast-container .toast-success {
    background-color: #51A351;
}

#toast-container .toast-error {
    background-color: #BD362F;
}

#toast-container .toast-info {
    background-color: #2F96B4;
}

#toast-container .toast-warning {
    background-color: #F89406;
}

#toast-container .toast-progress {
    background-color: #000000;
}

ons-button.kv-button-with-text > ons-icon {
    margin-right: 5px;
}

ons-toolbar-button.kv-button-with-text > ons-icon {
    margin-right: 5px;
}

.kv-ons-form-group {
    margin-bottom: 0.5rem;
}

.kv-ons-form-group .form-label {
    font-size: 12px;
}

.page--material .kv-ons-form-group .form-label {
    color: #3d5afe;
}

.kv-ons-label {
    display: inline-block;
    margin-bottom: 0.5rem;
}

.kv-ons-form-group .kv-ons-form-control {
    width: 100%;
}

.kv-ons-form-group ons-input.kv-ons-form-control[float="float"][modifier~="material"] {
    margin-top: 16px;
}

label.required-label + ons-input > span.text-input__label::after {
    content: " *";
    color: var(--bs-danger, #dc3545);
}

.kv-ons-checkbox {
    display: flex;
    align-items: center;
}

.kv-ons-checkbox label {
    margin-left: 5px;
}

.ts-wrapper.kv-typeahead .ts-control, .ts-wrapper.kv-typeahead .ts-control input {
    cursor: inherit;
}

.ts-wrapper.is-invalid.kv-typeahead, .was-validated .invalid.kv-typeahead, .was-validated :invalid + .ts-wrapper.kv-typeahead {
    padding-right: calc(1.5em + .75rem);
    background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 12 12%27 width=%2712%27 height=%2712%27 fill=%27none%27 stroke=%27%23dc3545%27%3e%3ccircle cx=%276%27 cy=%276%27 r=%274.5%27/%3e%3cpath stroke-linejoin=%27round%27 d=%27M5.8 3.6h.4L6 6.5z%27/%3e%3ccircle cx=%276%27 cy=%278.2%27 r=%27.6%27 fill=%27%23dc3545%27 stroke=%27none%27/%3e%3c/svg%3e");
    background-repeat: no-repeat;
    background-position: right calc(.375em + .1875rem) center;
    background-size: calc(.75em + .375rem) calc(.75em + .375rem);
}

.kv-tom-select-remote-divider {
    height: 0;
    margin: .5rem 0;
    overflow: hidden;
    border-top: 1px solid #888888;
}

.toastify {
    background-image: unset;
    background-color: blue;
}

.kv-toastify-primary {
    color: #fff !important;
    background-color: rgba(13,110,253) !important;
}

.kv-toastify-secondary {
    color: #fff !important;
    background-color: rgba(108,117,125) !important;
}

.kv-toastify-success {
    color: #fff !important;
    background-color: rgba(25,135,84) !important;
}

.kv-toastify-info {
    color: #000 !important;
    background-color: rgba(13,202,240) !important;
}

.kv-toastify-warning {
    color: #000 !important;
    background-color: rgba(255,193,7) !important;
}

.kv-toastify-danger {
    color: #fff !important;
    background-color: rgba(220,53,69) !important;
}

.kv-toastify-light {
    color: #000 !important;
    background-color: rgba(248,249,250) !important;
}

.kv-toastify-dark {
    color: #fff !important;
    background-color: rgba(33,37,41) !important;
}

.dropdown-toggle.kv-dropdown-no-arrow::after {
    content: none;
}

.btn-group-xsm > .btn, .btn-xsm {
    --bs-btn-padding-y: 0.1rem;
    --bs-btn-padding-x: 0.4rem;
    --bs-btn-font-size: 0.8rem;
    --bs-btn-border-radius: 0.25rem;
    padding-top: 3px;
}

.form-check-input:not(:checked):disabled {
    background-color: #e9ecef;
    opacity: 1;
}

.form-check-input:disabled ~ .form-check-label, .form-check-input[disabled] ~ .form-check-label {
    opacity: unset;
}

/*!
 * bootstrap-vertical-tabs - v1.2.2
 * https://dbtek.github.io/bootstrap-vertical-tabs
 * 2016-12-02
 * Copyright (c) 2016 İsmail Demirbilek
 * License: MIT
 */
.nav-tabs.tabs-left, .nav-tabs.tabs-right {
    border-bottom: none;
    padding-top: 2px;
}

.nav-tabs.tabs-left {
    border-right: 1px solid #dee2e6;
}
/* ... */

